--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1078,7 +1078,7 @@ a {
 .cid-tPQ8uWDLwV {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #fff0b0;
+  background-color: #ffb5b5;
 }
 .cid-tPQ8uWDLwV .mbr-fallback-image.disabled {
   display: none;
