--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1043,7 +1043,7 @@ a {
   }
 }
 .cid-tPQaZLcp8r {
-  background-color: #ffe885;
+  background-color: #f5e5a0;
 }
 .cid-tPQaZLcp8r .mbr-fallback-image.disabled {
   display: none;
@@ -1078,7 +1078,7 @@ a {
 .cid-tQ1pDBEPhd {
   padding-top: 6rem;
   padding-bottom: 5rem;
-  background-color: #f5d95f;
+  background-color: #fceca6;
 }
 .cid-tQ1pDBEPhd .mbr-fallback-image.disabled {
   display: none;
@@ -1105,7 +1105,7 @@ a {
 .cid-tQ1K3yxc6R {
   padding-top: 4rem;
   padding-bottom: 4rem;
-  background-color: #ffffff;
+  background-color: #fff0b0;
 }
 .cid-tQ1K3yxc6R .mbr-fallback-image.disabled {
   display: none;
@@ -1807,7 +1807,7 @@ a {
 .cid-tQ1ATOE2n7 {
   padding-top: 5rem;
   padding-bottom: 3rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1ATOE2n7 .mbr-fallback-image.disabled {
   display: none;
@@ -2070,7 +2070,7 @@ a {
 .cid-tQ1w4i18dc {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1w4i18dc .mbr-fallback-image.disabled {
   display: none;
@@ -2117,7 +2117,7 @@ a {
 .cid-tQ1w4v14YS {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1w4v14YS .mbr-fallback-image.disabled {
   display: none;
@@ -2164,15 +2164,15 @@ a {
   width: 100%;
   object-fit: cover;
 }
-.cid-tQ1w4RgwJd {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
+.cid-tQnl8QklzN {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background: #edeca2;
 }
-.cid-tQ1w4RgwJd .mbr-fallback-image.disabled {
+.cid-tQnl8QklzN .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tQ1w4RgwJd .mbr-fallback-image {
+.cid-tQnl8QklzN .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2181,35 +2181,30 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tQ1w4RgwJd .content-wrapper {
-  background: #fafafa;
+.cid-tQnl8QklzN .google-map {
+  height: 30rem;
+  position: relative;
 }
-@media (max-width: 991px) {
-  .cid-tQ1w4RgwJd .content-wrapper .image-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tQ1w4RgwJd .content-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-tQ1w4RgwJd .content-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-tQ1w4RgwJd .content-wrapper {
-    padding: 5rem 3rem;
-  }
-  .cid-tQ1w4RgwJd .content-wrapper .text-wrapper {
-    padding-left: 2rem;
-  }
-}
-.cid-tQ1w4RgwJd .image-wrapper img {
+.cid-tQnl8QklzN .google-map iframe {
+  height: 100%;
   width: 100%;
-  object-fit: cover;
+}
+.cid-tQnl8QklzN .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tQnl8QklzN .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tQnl8QklzN .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
 .cid-tQ1zODMGaT {
   padding-top: 2rem;
@@ -2643,7 +2638,7 @@ a {
 .cid-tQ1AwB5DB7 {
   padding-top: 5rem;
   padding-bottom: 3rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1AwB5DB7 .mbr-fallback-image.disabled {
   display: none;
@@ -2906,7 +2901,7 @@ a {
 .cid-tQ1vRuWyJQ {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1vRuWyJQ .mbr-fallback-image.disabled {
   display: none;
@@ -2956,7 +2951,7 @@ a {
 .cid-tQ1vROyGF3 {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1vROyGF3 .mbr-fallback-image.disabled {
   display: none;
@@ -3000,15 +2995,15 @@ a {
   width: 100%;
   object-fit: cover;
 }
-.cid-tQ1vSa3qLl {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
+.cid-tQnxnYaEgI {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background: #edeca2;
 }
-.cid-tQ1vSa3qLl .mbr-fallback-image.disabled {
+.cid-tQnxnYaEgI .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tQ1vSa3qLl .mbr-fallback-image {
+.cid-tQnxnYaEgI .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -3017,38 +3012,30 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tQ1vSa3qLl .content-wrapper {
-  background: #fafafa;
+.cid-tQnxnYaEgI .google-map {
+  height: 30rem;
+  position: relative;
 }
-@media (max-width: 991px) {
-  .cid-tQ1vSa3qLl .content-wrapper .row {
-    flex-direction: column-reverse;
-  }
-  .cid-tQ1vSa3qLl .content-wrapper .image-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tQ1vSa3qLl .content-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-tQ1vSa3qLl .content-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-tQ1vSa3qLl .content-wrapper {
-    padding: 5rem 3rem;
-  }
-  .cid-tQ1vSa3qLl .content-wrapper .text-wrapper {
-    padding-right: 2rem;
-  }
-}
-.cid-tQ1vSa3qLl .image-wrapper img {
+.cid-tQnxnYaEgI .google-map iframe {
+  height: 100%;
   width: 100%;
-  object-fit: cover;
+}
+.cid-tQnxnYaEgI .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tQnxnYaEgI .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tQnxnYaEgI .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
 .cid-tQ1zODMGaT {
   padding-top: 2rem;
@@ -3482,7 +3469,7 @@ a {
 .cid-tQ1BvmDHUV {
   padding-top: 5rem;
   padding-bottom: 3rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1BvmDHUV .mbr-fallback-image.disabled {
   display: none;
@@ -3745,7 +3732,7 @@ a {
 .cid-tQ1w9gzpHV {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1w9gzpHV .mbr-fallback-image.disabled {
   display: none;
@@ -3792,7 +3779,7 @@ a {
 .cid-tQ1w9wamxe {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #edeca2;
 }
 .cid-tQ1w9wamxe .mbr-fallback-image.disabled {
   display: none;
@@ -3839,15 +3826,15 @@ a {
   width: 100%;
   object-fit: cover;
 }
-.cid-tQ1w9PfFFX {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
+.cid-tQnAN8L6yd {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background: #edeca2;
 }
-.cid-tQ1w9PfFFX .mbr-fallback-image.disabled {
+.cid-tQnAN8L6yd .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tQ1w9PfFFX .mbr-fallback-image {
+.cid-tQnAN8L6yd .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -3856,35 +3843,30 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tQ1w9PfFFX .content-wrapper {
-  background: #fafafa;
+.cid-tQnAN8L6yd .google-map {
+  height: 30rem;
+  position: relative;
 }
-@media (max-width: 991px) {
-  .cid-tQ1w9PfFFX .content-wrapper .image-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tQ1w9PfFFX .content-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-tQ1w9PfFFX .content-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-tQ1w9PfFFX .content-wrapper {
-    padding: 5rem 3rem;
-  }
-  .cid-tQ1w9PfFFX .content-wrapper .text-wrapper {
-    padding-left: 2rem;
-  }
-}
-.cid-tQ1w9PfFFX .image-wrapper img {
+.cid-tQnAN8L6yd .google-map iframe {
+  height: 100%;
   width: 100%;
-  object-fit: cover;
+}
+.cid-tQnAN8L6yd .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tQnAN8L6yd .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tQnAN8L6yd .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
 .cid-tQ1zODMGaT {
   padding-top: 2rem;
