--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1119,13 +1119,8 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tQ1K3yxc6R .row {
-  margin-left: 0;
-  margin-right: 0;
-}
 .cid-tQ1K3yxc6R .item {
-  padding-left: 0;
-  padding-right: 0;
+  padding-bottom: 2rem;
 }
 .cid-tQ1K3yxc6R .item-wrapper {
   height: 100%;
