--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -760,7 +760,7 @@ a {
 }
 .cid-tPQ3RuY9gH .dropdown-menu,
 .cid-tPQ3RuY9gH .navbar.opened {
-  background: #339b12 !important;
+  background: #866432 !important;
 }
 .cid-tPQ3RuY9gH .nav-item:focus,
 .cid-tPQ3RuY9gH .nav-link:focus {
@@ -795,7 +795,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #339b12;
+  background: #866432;
 }
 .cid-tPQ3RuY9gH .navbar.opened {
   transition: all 0.3s;
@@ -940,7 +940,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-tPQ3RuY9gH .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #339b12;
+  background: #866432;
 }
 .cid-tPQ3RuY9gH .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1043,7 +1043,7 @@ a {
   }
 }
 .cid-tPQaZLcp8r {
-  background-color: #f5e5a0;
+  background-color: #fff0b0;
 }
 .cid-tPQaZLcp8r .mbr-fallback-image.disabled {
   display: none;
@@ -1078,7 +1078,7 @@ a {
 .cid-tQ1pDBEPhd {
   padding-top: 6rem;
   padding-bottom: 5rem;
-  background-color: #fceca6;
+  background-color: #fff0b0;
 }
 .cid-tQ1pDBEPhd .mbr-fallback-image.disabled {
   display: none;
@@ -1517,7 +1517,7 @@ a {
 }
 .cid-tPQ3RuY9gH .dropdown-menu,
 .cid-tPQ3RuY9gH .navbar.opened {
-  background: #339b12 !important;
+  background: #866432 !important;
 }
 .cid-tPQ3RuY9gH .nav-item:focus,
 .cid-tPQ3RuY9gH .nav-link:focus {
@@ -1552,7 +1552,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #339b12;
+  background: #866432;
 }
 .cid-tPQ3RuY9gH .navbar.opened {
   transition: all 0.3s;
@@ -1697,7 +1697,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-tPQ3RuY9gH .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #339b12;
+  background: #866432;
 }
 .cid-tPQ3RuY9gH .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1802,7 +1802,7 @@ a {
 .cid-tQ1ATOE2n7 {
   padding-top: 7rem;
   padding-bottom: 8rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tQ1ATOE2n7 .mbr-fallback-image.disabled {
   display: none;
@@ -2065,7 +2065,7 @@ a {
 .cid-tRwVtxaVFC {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tRwVtxaVFC img,
 .cid-tRwVtxaVFC .item-img {
@@ -2085,7 +2085,7 @@ a {
 .cid-tRwVtxaVFC .item-wrapper {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #6da66f;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -2119,7 +2119,7 @@ a {
 .cid-tQ1w4v14YS {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tQ1w4v14YS .mbr-fallback-image.disabled {
   display: none;
@@ -2134,7 +2134,7 @@ a {
   top: 0;
 }
 .cid-tQ1w4v14YS .content-wrapper {
-  background: #fafafa;
+  background: #6da66f;
 }
 @media (max-width: 991px) {
   .cid-tQ1w4v14YS .content-wrapper .row {
@@ -2176,7 +2176,7 @@ a {
 .cid-tRpWFvKhwB {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #edeca2;
+  background-color: #73812d;
 }
 .cid-tRpWFvKhwB .mbr-fallback-image.disabled {
   display: none;
@@ -2444,7 +2444,7 @@ a {
 .cid-tRpWG0Iy9C {
   padding-top: 1rem;
   padding-bottom: 2rem;
-  background-color: #edeca2;
+  background-color: #73812d;
 }
 .cid-tRpWG0Iy9C .mbr-fallback-image.disabled {
   display: none;
@@ -2712,7 +2712,7 @@ a {
 .cid-tQnl8QklzN {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background: #edeca2;
+  background: #857d7d;
 }
 .cid-tQnl8QklzN .mbr-fallback-image.disabled {
   display: none;
@@ -2750,6 +2750,9 @@ a {
 }
 .cid-tQnl8QklzN .google-map[data-state="loading"] [data-state-details] {
   display: none;
+}
+.cid-tQnl8QklzN .mbr-section-title {
+  color: #000000;
 }
 .cid-tQ1zODMGaT {
   padding-top: 2rem;
@@ -2898,7 +2901,7 @@ a {
 }
 .cid-tPQ3RuY9gH .dropdown-menu,
 .cid-tPQ3RuY9gH .navbar.opened {
-  background: #339b12 !important;
+  background: #866432 !important;
 }
 .cid-tPQ3RuY9gH .nav-item:focus,
 .cid-tPQ3RuY9gH .nav-link:focus {
@@ -2933,7 +2936,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #339b12;
+  background: #866432;
 }
 .cid-tPQ3RuY9gH .navbar.opened {
   transition: all 0.3s;
@@ -3078,7 +3081,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-tPQ3RuY9gH .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #339b12;
+  background: #866432;
 }
 .cid-tPQ3RuY9gH .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3183,7 +3186,7 @@ a {
 .cid-tQ1AwB5DB7 {
   padding-top: 7rem;
   padding-bottom: 8rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tQ1AwB5DB7 .mbr-fallback-image.disabled {
   display: none;
@@ -3446,7 +3449,7 @@ a {
 .cid-tRx5AKkW2I {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tRx5AKkW2I img,
 .cid-tRx5AKkW2I .item-img {
@@ -3466,7 +3469,7 @@ a {
 .cid-tRx5AKkW2I .item-wrapper {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #6da66f;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -3500,7 +3503,7 @@ a {
 .cid-tQ1vROyGF3 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tQ1vROyGF3 .mbr-fallback-image.disabled {
   display: none;
@@ -3515,7 +3518,7 @@ a {
   top: 0;
 }
 .cid-tQ1vROyGF3 .content-wrapper {
-  background: #fafafa;
+  background: #6da66f;
 }
 @media (max-width: 991px) {
   .cid-tQ1vROyGF3 .content-wrapper .image-wrapper {
@@ -3550,7 +3553,7 @@ a {
 .cid-tRpXGlpvef {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #edeca2;
+  background-color: #73812d;
 }
 .cid-tRpXGlpvef .mbr-fallback-image.disabled {
   display: none;
@@ -3818,7 +3821,7 @@ a {
 .cid-tRpXGKRZPP {
   padding-top: 1rem;
   padding-bottom: 2rem;
-  background-color: #edeca2;
+  background-color: #73812d;
 }
 .cid-tRpXGKRZPP .mbr-fallback-image.disabled {
   display: none;
@@ -4086,7 +4089,7 @@ a {
 .cid-tQnxnYaEgI {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background: #edeca2;
+  background: #857d7d;
 }
 .cid-tQnxnYaEgI .mbr-fallback-image.disabled {
   display: none;
@@ -4272,7 +4275,7 @@ a {
 }
 .cid-tPQ3RuY9gH .dropdown-menu,
 .cid-tPQ3RuY9gH .navbar.opened {
-  background: #339b12 !important;
+  background: #866432 !important;
 }
 .cid-tPQ3RuY9gH .nav-item:focus,
 .cid-tPQ3RuY9gH .nav-link:focus {
@@ -4307,7 +4310,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #339b12;
+  background: #866432;
 }
 .cid-tPQ3RuY9gH .navbar.opened {
   transition: all 0.3s;
@@ -4452,7 +4455,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-tPQ3RuY9gH .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #339b12;
+  background: #866432;
 }
 .cid-tPQ3RuY9gH .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4557,7 +4560,7 @@ a {
 .cid-tQ1BvmDHUV {
   padding-top: 7rem;
   padding-bottom: 8rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tQ1BvmDHUV .mbr-fallback-image.disabled {
   display: none;
@@ -4820,7 +4823,7 @@ a {
 .cid-tRx6RfmxRv {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tRx6RfmxRv img,
 .cid-tRx6RfmxRv .item-img {
@@ -4840,7 +4843,7 @@ a {
 .cid-tRx6RfmxRv .item-wrapper {
   position: relative;
   border-radius: 4px;
-  background: #fafafa;
+  background: #6da66f;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -4874,7 +4877,7 @@ a {
 .cid-tQ1w9wamxe {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #edeca2;
+  background-color: #fff0b0;
 }
 .cid-tQ1w9wamxe .mbr-fallback-image.disabled {
   display: none;
@@ -4889,7 +4892,7 @@ a {
   top: 0;
 }
 .cid-tQ1w9wamxe .content-wrapper {
-  background: #fafafa;
+  background: #6da66f;
 }
 @media (max-width: 991px) {
   .cid-tQ1w9wamxe .content-wrapper .row {
@@ -4931,7 +4934,7 @@ a {
 .cid-tRpYRc3nKQ {
   padding-top: 1rem;
   padding-bottom: 0rem;
-  background-color: #edeca2;
+  background-color: #73812d;
 }
 .cid-tRpYRc3nKQ .mbr-fallback-image.disabled {
   display: none;
@@ -5199,7 +5202,7 @@ a {
 .cid-tRpYREgpti {
   padding-top: 1rem;
   padding-bottom: 2rem;
-  background-color: #edeca2;
+  background-color: #73812d;
 }
 .cid-tRpYREgpti .mbr-fallback-image.disabled {
   display: none;
@@ -5467,7 +5470,7 @@ a {
 .cid-tQnAN8L6yd {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background: #edeca2;
+  background: #857d7d;
 }
 .cid-tQnAN8L6yd .mbr-fallback-image.disabled {
   display: none;
