--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1046,10 +1046,10 @@ a {
   background-color: #fff0b0;
 }
 .cid-tPQaZLcp8r .mbr-fallback-image.disabled {
-  display: none;
+  display: inline-block;
 }
 .cid-tPQaZLcp8r .mbr-fallback-image {
-  display: block;
+  display: inline-block;
   background-size: cover;
   background-position: center center;
   width: 100%;
@@ -1075,6 +1075,18 @@ a {
   background-color: #232323;
   color: #ffffff;
 }
+.cid-yyyyyrrrr
+{
+  display: inline-block;
+  align-content: center;
+  align-self: center;
+}
+.cid-rrrrig
+{
+  background-position: center;
+  background-size: cover;
+}
+
 .cid-tQ1pDBEPhd {
   padding-top: 6rem;
   padding-bottom: 5rem;
